# SSCSSim

./: .gitignore  CMakeLists.txt  i.txt  main.cpp  o.txt  print.py  print_poisson.py  print_test.py  train_mnist.cpp  u.txt
analysis/: i.txt  o.txt  po.txt  print.py  print_poisson.py  print_test.py  test.py  u.txt
src/: dataloader.hpp  macro.h  model.hpp  netgen.hpp  network.hpp  neuron.hpp  simulator.hpp  spikegen.hpp  timer.hpp  util.hpp
